crates/cli/tests/snapshots/activate_test__activate__can_include_global_tools-12.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
del $PROTO_VERSION
$_PROTO_ACTIVATED_PATH = f"<WORKSPACE>/.proto/shims:<WORKSPACE>/.proto/bin"
