crates/cli/tests/snapshots/activate_test__activate__can_include_global_tools-6.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---

drop PROTO_VERSION
export _PROTO_ACTIVATED_PATH='<WORKSPACE>/.proto/shims:<WORKSPACE>/.proto/bin'
