crates/cli/tests/snapshots/activate_test__activate__can_include_global_tools.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
set paths = [<WORKSPACE>/.proto/shims <WORKSPACE>/.proto/bin $@paths];
