crates/cli/tests/snapshots/activate_test__activate__empty_output_if_no_tools-11.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
_proto_activate_hook() {
  _proto_activate_hook_output=$(proto activate sh --export)
  if [ -n "$_proto_activate_hook_output" ]; then
    eval "$_proto_activate_hook_output"
  fi
  unset _proto_activate_hook_output
}

_proto_deactivate_hook() {
  _proto_deactivate_hook_output=$(proto deactivate sh --export)
  if [ -n "$_proto_deactivate_hook_output" ]; then
    eval "$_proto_deactivate_hook_output"
  fi
  unset _proto_deactivate_hook_output
  unset -f cd _proto_activate_hook _proto_deactivate_hook
}

cd() {
  command cd "$@" || return $?
  _proto_activate_hook
  return 0
}

_proto_activate_hook
