crates/cli/tests/snapshots/activate_test__activate__empty_output_if_no_tools-12.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
def proto-activate(olddir=None, newdir=None, **kwargs):
    output = $(proto activate xonsh --export)
    if output:
        execx(output)

def proto-deactivate():
    global proto-activate, proto-deactivate
    output = $(proto deactivate xonsh --export)
    if output:
        execx(output)
    for handler in list(events.on_chdir):
        if getattr(handler, '__name__', '') == 'proto-activate':
            events.on_chdir.discard(handler)
    del proto-activate, proto-deactivate

# Re-sourcing creates new function objects, so deduplicate by name
if not any(getattr(handler, '__name__', '') == 'proto-activate' for handler in events.on_chdir):
    events.on_chdir(proto-activate)

proto-activate()
